// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Chart renders Active 1`] = `
<div
  className="w-full flex flex-row gap-36"
>
  <div
    className="sc-gPKDLW fDKba"
    style={
      Object {
        "height": 446,
      }
    }
  >
    <div
      className="sc-ksWjrO emcCVh"
    >
      <button
        className="sc-jJUdvr gntKQP"
        onClick={[Function]}
      >
        <svg
          className="sc-dmRaPn sc-hwByLP  iCgBEX"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.556 6.068a.5.5 0 00-.503.864l.503-.864zM16 8.652l.417.276a.5.5 0 00-.165-.708L16 8.652zm-2.634 3.065a.5.5 0 00.833.553l-.833-.553zm8.695-1.238a.5.5 0 00-.67.742l.67-.742zM12.053 6.932l3.695 2.152.504-.864-3.696-2.152-.503.864zm3.53 1.444l-2.217 3.341.833.553 2.218-3.342-.834-.552zm8.417 8.7C24 21.448 20.422 25 16 25v1c4.966 0 9-3.991 9-8.924h-1zM16 25c-4.422 0-8-3.552-8-7.924H7C7 22.009 11.034 26 16 26v-1zm-8-7.924c0-4.372 3.578-7.924 8-7.924v-1c-4.966 0-9 3.991-9 8.924h1zm13.39-5.855A7.868 7.868 0 0124 17.076h1a8.869 8.869 0 00-2.94-6.597l-.67.742z"
            fill="currentColor"
          />
        </svg>
      </button>
      <div />
      <button
        className="sc-jJUdvr gygpbN"
        onClick={[Function]}
      >
        <svg
          className="sc-gUAEMC"
          fill="none"
          fontSize="1.375rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 6.5v14.616m0 0l-4.385-4.385M16 21.115l4.385-4.384M6.5 18.923v3.654A2.923 2.923 0 009.423 25.5h13.154a2.923 2.923 0 002.923-2.923v-3.654"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
      <button
        className="sc-jJUdvr gygpbN"
        onClick={[Function]}
      >
        <svg
          className="sc-jfmDQi"
          fill="none"
          fontSize="1.375rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.5 12.832V6.5h6.334m-6.33 0l18.998 19m-6.334-.005H25.5v-6.332m0-6.331V6.5h-6.334m6.33 0L6.5 25.5m6.334-.005H6.501v-6.332"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      className="sc-kHMNun hXkBpu"
    >
      <div
        className="sc-iUjRoI fDCzcC"
      >
        <svg
          fill="none"
          height="40"
          viewBox="0 0 40 40"
          width="40"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            clipPath="url(#Countries_svg__clip0)"
          >
            <path
              d="M20.225 39.909c11.03 0 19.97-8.94 19.97-19.97 0-11.029-8.94-19.97-19.97-19.97C9.197-.03.255 8.91.255 19.94c0 11.03 8.942 19.97 19.97 19.97z"
              fill="url(#Countries_svg__paint0_linear)"
              opacity={0.85}
            />
            <path
              d="M30.927 19.662l-.26 1.737a2.067 2.067 0 00.868 2.015 2.051 2.051 0 01.46 3.032l-6.002 7.113a2.05 2.05 0 01-3.405-.408l-.382-.755a2.05 2.05 0 010-1.894l.816-1.529a2.04 2.04 0 00.14-1.624l-.296-.869a2.05 2.05 0 00-1.737-1.398l-5.36-.504a2.066 2.066 0 01-1.607-1.103l-2.145-3.987a2.05 2.05 0 01.582-2.606l4.048-3.031a2.05 2.05 0 011.233-.417h4.117a2.058 2.058 0 011.564.73l1.659 1.962c.308.363.731.608 1.199.695l2.823.513a2.059 2.059 0 011.685 2.328zM12.642 8.526l1-3.84a2.059 2.059 0 00-2.954-2.336A19.978 19.978 0 006.927 34.89a2.058 2.058 0 003.353-2.033l-1.347-5.168a2.006 2.006 0 00-.469-.869l-5.377-5.95a2.067 2.067 0 01-.39-2.154l.816-2.05c.129-.34.344-.64.626-.869l7.817-6.236c.33-.267.569-.627.686-1.034zm10.667-6.35L22.64 4.61a2.024 2.024 0 00.443 1.91l5.68 6.41c.294.329.683.556 1.113.652l6.462 1.355a2.059 2.059 0 002.31-2.823A20.04 20.04 0 0025.916.752a2.076 2.076 0 00-2.606 1.424z"
              fill="url(#Countries_svg__paint1_linear)"
              opacity={0.8}
            />
          </g>
          <defs>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Countries_svg__paint0_linear"
              x1={-53.211}
              x2={59.307}
              y1={-47.055}
              y2={-1.544}
            >
              <stop
                stopColor="#1757FF"
                stopOpacity={0.7}
              />
              <stop
                offset={1}
                stopColor="#1757FF"
                stopOpacity={0}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Countries_svg__paint1_linear"
              x1={6.352}
              x2={41.837}
              y1={23.518}
              y2={23.705}
            >
              <stop
                stopColor="#FFD60A"
              />
              <stop
                offset={1}
                stopColor="#FFD60A"
                stopOpacity={0}
              />
            </linearGradient>
            <clipPath
              id="Countries_svg__clip0"
            >
              <path
                d="M0 0h40v40H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
        </svg>
      </div>
      <p
        className="sc-jveewi sc-cmYlSf fZDfgK hqBrTw"
        size={20}
      >
        Top Countries
      </p>
      <div
        className="sc-fXPgIJ"
      >
        <div
          className="sc-eBhLNR yyKIN"
        >
          <button
            className="sc-hxCwtQ gjgraJ"
            onClick={[Function]}
          >
            <p
              className="sc-jveewi sc-bPnocz dbvQYG kJDCRP"
              size={14}
            >
              by GGR
            </p>
            <svg
              className="sc-efBctP"
              fill="none"
              fontSize="1.4375rem"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      className="sc-iCxJSg xIggz"
    >
      <div
        className="sc-bySYJV ceEsps"
      >
        <div
          className="sc-cuQNSp dnkGqT"
        >
          <div
            className="sc-frlyyo cvYMYj"
          >
            <span
              className="sc-gA-DJDv jqLrQd"
            >
              1
            </span>
          </div>
          <div
            className="sc-frlyyo cvYMYj"
          >
            <div
              className="sc-jwYuju dYBsZB"
            >
              Estonia
            </div>
          </div>
          <div
            className="sc-frlyyo gelPeQ"
          >
            <div
              className="sc-jvdzsS hjDdZC"
            >
              <div
                className="sc-gyIOMT BVnai"
                style={
                  Object {
                    "background": "#ffb319",
                    "opacity": 1,
                    "width": "5%",
                  }
                }
              />
            </div>
          </div>
          <div
            className="sc-frlyyo cvYMYj"
          >
            <div
              className="sc-evnJpU iVWPzV"
            >
              120
            </div>
          </div>
          <div
            className="sc-frlyyo cvYMYj"
          >
            <span
              className="sc-gA-DJDv jqLrQd"
            >
              2
            </span>
          </div>
          <div
            className="sc-frlyyo cvYMYj"
          >
            <div
              className="sc-jwYuju dYBsZB"
            >
              Russia
            </div>
          </div>
          <div
            className="sc-frlyyo gelPeQ"
          >
            <div
              className="sc-jvdzsS hjDdZC"
            >
              <div
                className="sc-gyIOMT BVnai"
                style={
                  Object {
                    "background": "#ffb319",
                    "opacity": 0.8333333333333334,
                    "width": "5%",
                  }
                }
              />
            </div>
          </div>
          <div
            className="sc-frlyyo cvYMYj"
          >
            <div
              className="sc-evnJpU iVWPzV"
            >
              100
            </div>
          </div>
          <div
            className="sc-frlyyo cvYMYj"
          >
            <span
              className="sc-gA-DJDv jqLrQd"
            >
              3
            </span>
          </div>
          <div
            className="sc-frlyyo cvYMYj"
          >
            <div
              className="sc-jwYuju dYBsZB"
            >
              Belarus
            </div>
          </div>
          <div
            className="sc-frlyyo gelPeQ"
          >
            <div
              className="sc-jvdzsS hjDdZC"
            >
              <div
                className="sc-gyIOMT BVnai"
                style={
                  Object {
                    "background": "#ffb319",
                    "opacity": 0.6666666666666666,
                    "width": "5%",
                  }
                }
              />
            </div>
          </div>
          <div
            className="sc-frlyyo cvYMYj"
          >
            <div
              className="sc-evnJpU iVWPzV"
            >
              80
            </div>
          </div>
          <div
            className="sc-frlyyo cvYMYj"
          >
            <span
              className="sc-gA-DJDv jqLrQd"
            >
              4
            </span>
          </div>
          <div
            className="sc-frlyyo cvYMYj"
          >
            <div
              className="sc-jwYuju dYBsZB"
            >
              Argentina
            </div>
          </div>
          <div
            className="sc-frlyyo gelPeQ"
          >
            <div
              className="sc-jvdzsS hjDdZC"
            >
              <div
                className="sc-gyIOMT BVnai"
                style={
                  Object {
                    "background": "#ffb319",
                    "opacity": 0.5,
                    "width": "5%",
                  }
                }
              />
            </div>
          </div>
          <div
            className="sc-frlyyo cvYMYj"
          >
            <div
              className="sc-evnJpU iVWPzV"
            >
              60
            </div>
          </div>
          <div
            className="sc-frlyyo cvYMYj"
          >
            <span
              className="sc-gA-DJDv jqLrQd"
            >
              5
            </span>
          </div>
          <div
            className="sc-frlyyo cvYMYj"
          >
            <div
              className="sc-jwYuju dYBsZB"
            >
              USA
            </div>
          </div>
          <div
            className="sc-frlyyo gelPeQ"
          >
            <div
              className="sc-jvdzsS hjDdZC"
            >
              <div
                className="sc-gyIOMT BVnai"
                style={
                  Object {
                    "background": "#ffb319",
                    "opacity": 0.3333333333333333,
                    "width": "5%",
                  }
                }
              />
            </div>
          </div>
          <div
            className="sc-frlyyo cvYMYj"
          >
            <div
              className="sc-evnJpU iVWPzV"
            >
              40
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-gPKDLW fDKba"
    style={
      Object {
        "height": 446,
      }
    }
  >
    <div
      className="sc-ksWjrO emcCVh"
    >
      <button
        className="sc-jJUdvr gygpbN"
        onClick={[Function]}
      >
        <div
          className="sc-gKsSvo kDKFEx"
          color="piccolo.100"
          size="twoxsmall"
        >
          <div />
          <div />
          <div />
          <div />
        </div>
      </button>
      <div />
      <button
        className="sc-jJUdvr gygpbN"
        onClick={[Function]}
      >
        <svg
          className="sc-gUAEMC"
          fill="none"
          fontSize="1.375rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 6.5v14.616m0 0l-4.385-4.385M16 21.115l4.385-4.384M6.5 18.923v3.654A2.923 2.923 0 009.423 25.5h13.154a2.923 2.923 0 002.923-2.923v-3.654"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
      <button
        className="sc-jJUdvr gygpbN"
        onClick={[Function]}
      >
        <svg
          className="sc-jfmDQi"
          fill="none"
          fontSize="1.375rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.5 12.832V6.5h6.334m-6.33 0l18.998 19m-6.334-.005H25.5v-6.332m0-6.331V6.5h-6.334m6.33 0L6.5 25.5m6.334-.005H6.501v-6.332"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      className="sc-kHMNun hXkBpu"
    >
      <div
        className="sc-iUjRoI fDCzcC"
      >
        <svg
          fill="none"
          height="40"
          viewBox="0 0 40 40"
          width="40"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            clipPath="url(#Countries_svg__clip0)"
          >
            <path
              d="M20.225 39.909c11.03 0 19.97-8.94 19.97-19.97 0-11.029-8.94-19.97-19.97-19.97C9.197-.03.255 8.91.255 19.94c0 11.03 8.942 19.97 19.97 19.97z"
              fill="url(#Countries_svg__paint0_linear)"
              opacity={0.85}
            />
            <path
              d="M30.927 19.662l-.26 1.737a2.067 2.067 0 00.868 2.015 2.051 2.051 0 01.46 3.032l-6.002 7.113a2.05 2.05 0 01-3.405-.408l-.382-.755a2.05 2.05 0 010-1.894l.816-1.529a2.04 2.04 0 00.14-1.624l-.296-.869a2.05 2.05 0 00-1.737-1.398l-5.36-.504a2.066 2.066 0 01-1.607-1.103l-2.145-3.987a2.05 2.05 0 01.582-2.606l4.048-3.031a2.05 2.05 0 011.233-.417h4.117a2.058 2.058 0 011.564.73l1.659 1.962c.308.363.731.608 1.199.695l2.823.513a2.059 2.059 0 011.685 2.328zM12.642 8.526l1-3.84a2.059 2.059 0 00-2.954-2.336A19.978 19.978 0 006.927 34.89a2.058 2.058 0 003.353-2.033l-1.347-5.168a2.006 2.006 0 00-.469-.869l-5.377-5.95a2.067 2.067 0 01-.39-2.154l.816-2.05c.129-.34.344-.64.626-.869l7.817-6.236c.33-.267.569-.627.686-1.034zm10.667-6.35L22.64 4.61a2.024 2.024 0 00.443 1.91l5.68 6.41c.294.329.683.556 1.113.652l6.462 1.355a2.059 2.059 0 002.31-2.823A20.04 20.04 0 0025.916.752a2.076 2.076 0 00-2.606 1.424z"
              fill="url(#Countries_svg__paint1_linear)"
              opacity={0.8}
            />
          </g>
          <defs>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Countries_svg__paint0_linear"
              x1={-53.211}
              x2={59.307}
              y1={-47.055}
              y2={-1.544}
            >
              <stop
                stopColor="#1757FF"
                stopOpacity={0.7}
              />
              <stop
                offset={1}
                stopColor="#1757FF"
                stopOpacity={0}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Countries_svg__paint1_linear"
              x1={6.352}
              x2={41.837}
              y1={23.518}
              y2={23.705}
            >
              <stop
                stopColor="#FFD60A"
              />
              <stop
                offset={1}
                stopColor="#FFD60A"
                stopOpacity={0}
              />
            </linearGradient>
            <clipPath
              id="Countries_svg__clip0"
            >
              <path
                d="M0 0h40v40H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
        </svg>
      </div>
      <p
        className="sc-jveewi sc-cmYlSf fZDfgK hqBrTw"
        size={20}
      >
        Top Countries
      </p>
      <div
        className="sc-fXPgIJ"
      >
        <div
          className="sc-eBhLNR yyKIN"
        >
          <button
            className="sc-hxCwtQ gjgraJ"
            onClick={[Function]}
          >
            <p
              className="sc-jveewi sc-bPnocz dbvQYG kJDCRP"
              size={14}
            >
              by GGR
            </p>
            <svg
              className="sc-efBctP"
              fill="none"
              fontSize="1.4375rem"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      className="sc-iCxJSg xIggz"
    >
      <div
        className="sc-bySYJV ceEsps"
      >
        <div
          className="sc-cuQNSp dnkGqT"
        >
          <div
            className="sc-frlyyo cvYMYj"
          >
            <span
              className="sc-gA-DJDv jqLrQd"
            >
              1
            </span>
          </div>
          <div
            className="sc-frlyyo cvYMYj"
          >
            <div
              className="sc-jwYuju dYBsZB"
            >
              Estonia
            </div>
          </div>
          <div
            className="sc-frlyyo gelPeQ"
          >
            <div
              className="sc-gYgiyK exCnyA"
            />
            <div
              className="sc-jvdzsS gLHXNE"
            >
              <div
                className="sc-gyIOMT BVnai"
                style={
                  Object {
                    "background": "#ffb319",
                    "opacity": 1,
                    "width": "5%",
                  }
                }
              />
            </div>
          </div>
          <div
            className="sc-frlyyo cvYMYj"
          >
            <div
              className="sc-evnJpU iVWPzV"
            >
              120
            </div>
          </div>
          <div
            className="sc-frlyyo cvYMYj"
          >
            <span
              className="sc-gA-DJDv jqLrQd"
            >
              2
            </span>
          </div>
          <div
            className="sc-frlyyo cvYMYj"
          >
            <div
              className="sc-jwYuju dYBsZB"
            >
              Russia
            </div>
          </div>
          <div
            className="sc-frlyyo gelPeQ"
          >
            <div
              className="sc-gYgiyK exCnyA"
            />
            <div
              className="sc-jvdzsS gLHXNE"
            >
              <div
                className="sc-gyIOMT BVnai"
                style={
                  Object {
                    "background": "#ffb319",
                    "opacity": 0.8333333333333334,
                    "width": "5%",
                  }
                }
              />
            </div>
          </div>
          <div
            className="sc-frlyyo cvYMYj"
          >
            <div
              className="sc-evnJpU iVWPzV"
            >
              100
            </div>
          </div>
          <div
            className="sc-frlyyo cvYMYj"
          >
            <span
              className="sc-gA-DJDv jqLrQd"
            >
              3
            </span>
          </div>
          <div
            className="sc-frlyyo cvYMYj"
          >
            <div
              className="sc-jwYuju dYBsZB"
            >
              Belarus
            </div>
          </div>
          <div
            className="sc-frlyyo gelPeQ"
          >
            <div
              className="sc-gYgiyK exCnyA"
            />
            <div
              className="sc-jvdzsS gLHXNE"
            >
              <div
                className="sc-gyIOMT BVnai"
                style={
                  Object {
                    "background": "#ffb319",
                    "opacity": 0.3,
                    "width": "5%",
                  }
                }
              />
            </div>
          </div>
          <div
            className="sc-frlyyo cvYMYj"
          >
            <div
              className="sc-evnJpU iVWPzV"
            >
              20
            </div>
          </div>
          <div
            className="sc-frlyyo cvYMYj"
          >
            <span
              className="sc-gA-DJDv jqLrQd"
            >
              4
            </span>
          </div>
          <div
            className="sc-frlyyo cvYMYj"
          >
            <div
              className="sc-jwYuju dYBsZB"
            >
              Argentina
            </div>
          </div>
          <div
            className="sc-frlyyo gelPeQ"
          >
            <div
              className="sc-gYgiyK exCnyA"
            />
            <div
              className="sc-jvdzsS hEWhLc"
            >
              <div
                className="sc-gyIOMT BVnai"
                style={
                  Object {
                    "background": "#ff4e64",
                    "opacity": 0.75,
                    "width": "5%",
                  }
                }
              />
            </div>
          </div>
          <div
            className="sc-frlyyo cvYMYj"
          >
            <div
              className="sc-evnJpU iVWPzV"
            >
              -60
            </div>
          </div>
          <div
            className="sc-frlyyo cvYMYj"
          >
            <span
              className="sc-gA-DJDv jqLrQd"
            >
              5
            </span>
          </div>
          <div
            className="sc-frlyyo cvYMYj"
          >
            <div
              className="sc-jwYuju dYBsZB"
            >
              USA
            </div>
          </div>
          <div
            className="sc-frlyyo gelPeQ"
          >
            <div
              className="sc-gYgiyK exCnyA"
            />
            <div
              className="sc-jvdzsS hEWhLc"
            >
              <div
                className="sc-gyIOMT BVnai"
                style={
                  Object {
                    "background": "#ff4e64",
                    "opacity": 1,
                    "width": "5%",
                  }
                }
              />
            </div>
          </div>
          <div
            className="sc-frlyyo cvYMYj"
          >
            <div
              className="sc-evnJpU iVWPzV"
            >
              -80
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-gPKDLW fDKba"
    style={
      Object {
        "height": 446,
      }
    }
  >
    <div
      className="sc-ksWjrO emcCVh"
    >
      <button
        className="sc-jJUdvr gygpbN"
        onClick={[Function]}
      >
        <svg
          className="sc-dmRaPn sc-hwByLP  iCgBEX"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.556 6.068a.5.5 0 00-.503.864l.503-.864zM16 8.652l.417.276a.5.5 0 00-.165-.708L16 8.652zm-2.634 3.065a.5.5 0 00.833.553l-.833-.553zm8.695-1.238a.5.5 0 00-.67.742l.67-.742zM12.053 6.932l3.695 2.152.504-.864-3.696-2.152-.503.864zm3.53 1.444l-2.217 3.341.833.553 2.218-3.342-.834-.552zm8.417 8.7C24 21.448 20.422 25 16 25v1c4.966 0 9-3.991 9-8.924h-1zM16 25c-4.422 0-8-3.552-8-7.924H7C7 22.009 11.034 26 16 26v-1zm-8-7.924c0-4.372 3.578-7.924 8-7.924v-1c-4.966 0-9 3.991-9 8.924h1zm13.39-5.855A7.868 7.868 0 0124 17.076h1a8.869 8.869 0 00-2.94-6.597l-.67.742z"
            fill="currentColor"
          />
        </svg>
      </button>
      <div />
      <button
        className="sc-jJUdvr gygpbN"
        onClick={[Function]}
      >
        <svg
          className="sc-gUAEMC"
          fill="none"
          fontSize="1.375rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 6.5v14.616m0 0l-4.385-4.385M16 21.115l4.385-4.384M6.5 18.923v3.654A2.923 2.923 0 009.423 25.5h13.154a2.923 2.923 0 002.923-2.923v-3.654"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
      <button
        className="sc-jJUdvr gygpbN"
        onClick={[Function]}
      >
        <svg
          className="sc-jfmDQi"
          fill="none"
          fontSize="1.375rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.5 12.832V6.5h6.334m-6.33 0l18.998 19m-6.334-.005H25.5v-6.332m0-6.331V6.5h-6.334m6.33 0L6.5 25.5m6.334-.005H6.501v-6.332"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      className="sc-kHMNun hXkBpu"
    >
      <div
        className="sc-iUjRoI fDCzcC"
      >
        <svg
          fill="none"
          height="40"
          viewBox="0 0 40 40"
          width="40"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            clipPath="url(#Countries_svg__clip0)"
          >
            <path
              d="M20.225 39.909c11.03 0 19.97-8.94 19.97-19.97 0-11.029-8.94-19.97-19.97-19.97C9.197-.03.255 8.91.255 19.94c0 11.03 8.942 19.97 19.97 19.97z"
              fill="url(#Countries_svg__paint0_linear)"
              opacity={0.85}
            />
            <path
              d="M30.927 19.662l-.26 1.737a2.067 2.067 0 00.868 2.015 2.051 2.051 0 01.46 3.032l-6.002 7.113a2.05 2.05 0 01-3.405-.408l-.382-.755a2.05 2.05 0 010-1.894l.816-1.529a2.04 2.04 0 00.14-1.624l-.296-.869a2.05 2.05 0 00-1.737-1.398l-5.36-.504a2.066 2.066 0 01-1.607-1.103l-2.145-3.987a2.05 2.05 0 01.582-2.606l4.048-3.031a2.05 2.05 0 011.233-.417h4.117a2.058 2.058 0 011.564.73l1.659 1.962c.308.363.731.608 1.199.695l2.823.513a2.059 2.059 0 011.685 2.328zM12.642 8.526l1-3.84a2.059 2.059 0 00-2.954-2.336A19.978 19.978 0 006.927 34.89a2.058 2.058 0 003.353-2.033l-1.347-5.168a2.006 2.006 0 00-.469-.869l-5.377-5.95a2.067 2.067 0 01-.39-2.154l.816-2.05c.129-.34.344-.64.626-.869l7.817-6.236c.33-.267.569-.627.686-1.034zm10.667-6.35L22.64 4.61a2.024 2.024 0 00.443 1.91l5.68 6.41c.294.329.683.556 1.113.652l6.462 1.355a2.059 2.059 0 002.31-2.823A20.04 20.04 0 0025.916.752a2.076 2.076 0 00-2.606 1.424z"
              fill="url(#Countries_svg__paint1_linear)"
              opacity={0.8}
            />
          </g>
          <defs>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Countries_svg__paint0_linear"
              x1={-53.211}
              x2={59.307}
              y1={-47.055}
              y2={-1.544}
            >
              <stop
                stopColor="#1757FF"
                stopOpacity={0.7}
              />
              <stop
                offset={1}
                stopColor="#1757FF"
                stopOpacity={0}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Countries_svg__paint1_linear"
              x1={6.352}
              x2={41.837}
              y1={23.518}
              y2={23.705}
            >
              <stop
                stopColor="#FFD60A"
              />
              <stop
                offset={1}
                stopColor="#FFD60A"
                stopOpacity={0}
              />
            </linearGradient>
            <clipPath
              id="Countries_svg__clip0"
            >
              <path
                d="M0 0h40v40H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
        </svg>
      </div>
      <p
        className="sc-jveewi sc-cmYlSf fZDfgK hqBrTw"
        size={20}
      >
        Top Countries
      </p>
      <div
        className="sc-fXPgIJ"
      >
        <div
          className="sc-eBhLNR yyKIN"
        >
          <button
            className="sc-hxCwtQ gjgraJ"
            onClick={[Function]}
          >
            <p
              className="sc-jveewi sc-bPnocz dbvQYG kJDCRP"
              size={14}
            >
              by GGR
            </p>
            <svg
              className="sc-efBctP"
              fill="none"
              fontSize="1.4375rem"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      className="sc-iCxJSg xIggz"
    >
      <div
        className="sc-bySYJV ceEsps"
      >
        <div
          className="sc-cuQNSp dnkGqT"
        >
          <div
            className="sc-frlyyo cvYMYj"
          >
            <span
              className="sc-gA-DJDv jqLrQd"
            >
              1
            </span>
          </div>
          <div
            className="sc-frlyyo cvYMYj"
          >
            <div
              className="sc-jwYuju dYBsZB"
            >
              Estonia
            </div>
          </div>
          <div
            className="sc-frlyyo gelPeQ"
          >
            <div
              className="sc-jvdzsS bSDOes"
            >
              <div
                className="sc-gyIOMT BVnai"
                style={
                  Object {
                    "background": "#ff4e64",
                    "opacity": 0.3333333333333333,
                    "width": "5%",
                  }
                }
              />
            </div>
          </div>
          <div
            className="sc-frlyyo cvYMYj"
          >
            <div
              className="sc-evnJpU iVWPzV"
            >
              -40
            </div>
          </div>
          <div
            className="sc-frlyyo cvYMYj"
          >
            <span
              className="sc-gA-DJDv jqLrQd"
            >
              2
            </span>
          </div>
          <div
            className="sc-frlyyo cvYMYj"
          >
            <div
              className="sc-jwYuju dYBsZB"
            >
              Russia
            </div>
          </div>
          <div
            className="sc-frlyyo gelPeQ"
          >
            <div
              className="sc-jvdzsS bSDOes"
            >
              <div
                className="sc-gyIOMT BVnai"
                style={
                  Object {
                    "background": "#ff4e64",
                    "opacity": 0.5,
                    "width": "5%",
                  }
                }
              />
            </div>
          </div>
          <div
            className="sc-frlyyo cvYMYj"
          >
            <div
              className="sc-evnJpU iVWPzV"
            >
              -60
            </div>
          </div>
          <div
            className="sc-frlyyo cvYMYj"
          >
            <span
              className="sc-gA-DJDv jqLrQd"
            >
              3
            </span>
          </div>
          <div
            className="sc-frlyyo cvYMYj"
          >
            <div
              className="sc-jwYuju dYBsZB"
            >
              Belarus
            </div>
          </div>
          <div
            className="sc-frlyyo gelPeQ"
          >
            <div
              className="sc-jvdzsS bSDOes"
            >
              <div
                className="sc-gyIOMT BVnai"
                style={
                  Object {
                    "background": "#ff4e64",
                    "opacity": 0.6666666666666666,
                    "width": "5%",
                  }
                }
              />
            </div>
          </div>
          <div
            className="sc-frlyyo cvYMYj"
          >
            <div
              className="sc-evnJpU iVWPzV"
            >
              -80
            </div>
          </div>
          <div
            className="sc-frlyyo cvYMYj"
          >
            <span
              className="sc-gA-DJDv jqLrQd"
            >
              4
            </span>
          </div>
          <div
            className="sc-frlyyo cvYMYj"
          >
            <div
              className="sc-jwYuju dYBsZB"
            >
              Argentina
            </div>
          </div>
          <div
            className="sc-frlyyo gelPeQ"
          >
            <div
              className="sc-jvdzsS bSDOes"
            >
              <div
                className="sc-gyIOMT BVnai"
                style={
                  Object {
                    "background": "#ff4e64",
                    "opacity": 0.8333333333333334,
                    "width": "5%",
                  }
                }
              />
            </div>
          </div>
          <div
            className="sc-frlyyo cvYMYj"
          >
            <div
              className="sc-evnJpU iVWPzV"
            >
              -100
            </div>
          </div>
          <div
            className="sc-frlyyo cvYMYj"
          >
            <span
              className="sc-gA-DJDv jqLrQd"
            >
              5
            </span>
          </div>
          <div
            className="sc-frlyyo cvYMYj"
          >
            <div
              className="sc-jwYuju dYBsZB"
            >
              USA
            </div>
          </div>
          <div
            className="sc-frlyyo gelPeQ"
          >
            <div
              className="sc-jvdzsS bSDOes"
            >
              <div
                className="sc-gyIOMT BVnai"
                style={
                  Object {
                    "background": "#ff4e64",
                    "opacity": 1,
                    "width": "5%",
                  }
                }
              />
            </div>
          </div>
          <div
            className="sc-frlyyo cvYMYj"
          >
            <div
              className="sc-evnJpU iVWPzV"
            >
              -120
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table Chart renders NoData 1`] = `
<div
  className="w-full flex flex-row gap-36"
>
  <div
    className="sc-gPKDLW fDKba"
    style={
      Object {
        "height": 446,
      }
    }
  >
    <div
      className="sc-ksWjrO emcCVh"
    >
      <button
        className="sc-jJUdvr gntKQP"
        onClick={[Function]}
      >
        <svg
          className="sc-dmRaPn sc-hwByLP  iCgBEX"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.556 6.068a.5.5 0 00-.503.864l.503-.864zM16 8.652l.417.276a.5.5 0 00-.165-.708L16 8.652zm-2.634 3.065a.5.5 0 00.833.553l-.833-.553zm8.695-1.238a.5.5 0 00-.67.742l.67-.742zM12.053 6.932l3.695 2.152.504-.864-3.696-2.152-.503.864zm3.53 1.444l-2.217 3.341.833.553 2.218-3.342-.834-.552zm8.417 8.7C24 21.448 20.422 25 16 25v1c4.966 0 9-3.991 9-8.924h-1zM16 25c-4.422 0-8-3.552-8-7.924H7C7 22.009 11.034 26 16 26v-1zm-8-7.924c0-4.372 3.578-7.924 8-7.924v-1c-4.966 0-9 3.991-9 8.924h1zm13.39-5.855A7.868 7.868 0 0124 17.076h1a8.869 8.869 0 00-2.94-6.597l-.67.742z"
            fill="currentColor"
          />
        </svg>
      </button>
      <div />
      <button
        className="sc-jJUdvr gygpbN"
        onClick={[Function]}
      >
        <svg
          className="sc-gUAEMC"
          fill="none"
          fontSize="1.375rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 6.5v14.616m0 0l-4.385-4.385M16 21.115l4.385-4.384M6.5 18.923v3.654A2.923 2.923 0 009.423 25.5h13.154a2.923 2.923 0 002.923-2.923v-3.654"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
      <button
        className="sc-jJUdvr gygpbN"
        onClick={[Function]}
      >
        <svg
          className="sc-jfmDQi"
          fill="none"
          fontSize="1.375rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.5 12.832V6.5h6.334m-6.33 0l18.998 19m-6.334-.005H25.5v-6.332m0-6.331V6.5h-6.334m6.33 0L6.5 25.5m6.334-.005H6.501v-6.332"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      className="sc-kHMNun hXkBpu"
    >
      <div
        className="sc-iUjRoI fDCzcC"
      >
        <svg
          fill="none"
          height="40"
          viewBox="0 0 40 40"
          width="40"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            clipPath="url(#Countries_svg__clip0)"
          >
            <path
              d="M20.225 39.909c11.03 0 19.97-8.94 19.97-19.97 0-11.029-8.94-19.97-19.97-19.97C9.197-.03.255 8.91.255 19.94c0 11.03 8.942 19.97 19.97 19.97z"
              fill="url(#Countries_svg__paint0_linear)"
              opacity={0.85}
            />
            <path
              d="M30.927 19.662l-.26 1.737a2.067 2.067 0 00.868 2.015 2.051 2.051 0 01.46 3.032l-6.002 7.113a2.05 2.05 0 01-3.405-.408l-.382-.755a2.05 2.05 0 010-1.894l.816-1.529a2.04 2.04 0 00.14-1.624l-.296-.869a2.05 2.05 0 00-1.737-1.398l-5.36-.504a2.066 2.066 0 01-1.607-1.103l-2.145-3.987a2.05 2.05 0 01.582-2.606l4.048-3.031a2.05 2.05 0 011.233-.417h4.117a2.058 2.058 0 011.564.73l1.659 1.962c.308.363.731.608 1.199.695l2.823.513a2.059 2.059 0 011.685 2.328zM12.642 8.526l1-3.84a2.059 2.059 0 00-2.954-2.336A19.978 19.978 0 006.927 34.89a2.058 2.058 0 003.353-2.033l-1.347-5.168a2.006 2.006 0 00-.469-.869l-5.377-5.95a2.067 2.067 0 01-.39-2.154l.816-2.05c.129-.34.344-.64.626-.869l7.817-6.236c.33-.267.569-.627.686-1.034zm10.667-6.35L22.64 4.61a2.024 2.024 0 00.443 1.91l5.68 6.41c.294.329.683.556 1.113.652l6.462 1.355a2.059 2.059 0 002.31-2.823A20.04 20.04 0 0025.916.752a2.076 2.076 0 00-2.606 1.424z"
              fill="url(#Countries_svg__paint1_linear)"
              opacity={0.8}
            />
          </g>
          <defs>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Countries_svg__paint0_linear"
              x1={-53.211}
              x2={59.307}
              y1={-47.055}
              y2={-1.544}
            >
              <stop
                stopColor="#1757FF"
                stopOpacity={0.7}
              />
              <stop
                offset={1}
                stopColor="#1757FF"
                stopOpacity={0}
              />
            </linearGradient>
            <linearGradient
              gradientUnits="userSpaceOnUse"
              id="Countries_svg__paint1_linear"
              x1={6.352}
              x2={41.837}
              y1={23.518}
              y2={23.705}
            >
              <stop
                stopColor="#FFD60A"
              />
              <stop
                offset={1}
                stopColor="#FFD60A"
                stopOpacity={0}
              />
            </linearGradient>
            <clipPath
              id="Countries_svg__clip0"
            >
              <path
                d="M0 0h40v40H0z"
                fill="#fff"
              />
            </clipPath>
          </defs>
        </svg>
      </div>
      <p
        className="sc-jveewi sc-cmYlSf fZDfgK hqBrTw"
        size={20}
      >
        Top Countries
      </p>
      <div
        className="sc-fXPgIJ"
      >
        <div
          className="sc-eBhLNR yyKIN"
        >
          <button
            className="sc-hxCwtQ gjgraJ"
            onClick={[Function]}
          >
            <p
              className="sc-jveewi sc-bPnocz dbvQYG kJDCRP"
              size={14}
            >
              by GGR
            </p>
            <svg
              className="sc-efBctP"
              fill="none"
              fontSize="1.4375rem"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      className="sc-iCxJSg xIggz"
    >
      <div
        className="sc-bSGZAx edLvBc"
      >
        <svg
          fill="none"
          height="160"
          width="160"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M96 0H0v19.876h96V0z"
            fill="#D8E0E3"
          />
          <path
            d="M96 0h64v19.876H96V0z"
            fill="#EAEEF0"
          />
          <path
            d="M137.001 46.708h-137v19.876h137V46.708z"
            fill="#D8E0E3"
          />
          <path
            d="M137.001 46.708h7v19.876h-7V46.708z"
            fill="#EAEEF0"
          />
          <path
            d="M42.001 93.416h-42v19.876h42V93.416z"
            fill="#D8E0E3"
          />
          <path
            d="M42.001 93.416h118v19.876h-118V93.416z"
            fill="#EAEEF0"
          />
          <path
            d="M96 140.124H0V160h96v-19.876z"
            fill="#D8E0E3"
          />
          <path
            d="M96 140.124h49V160H96v-19.876z"
            fill="#EAEEF0"
          />
        </svg>
        <p
          className="sc-jveewi sc-hNDnKS bNVltx gRhIuT"
          color="trunks.100"
          size={14}
        >
          No data
        </p>
      </div>
    </div>
  </div>
</div>
`;
